[package]
name = "gust"
version = "0.1.0"
edition = "2021"
description= "rust like version of go"
license = "MIT or Apache-2.0"
author = ["Kilerd Chan <blove694@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kilerd/gust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
