[package]
name = "gust"
version = "0.1.0"
edition = "2021"
description= "rust like version of go"
license = "MIT or Apache-2.0"
author = ["Kilerd Chan <blove694@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kilerd/gust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
nom = "7.1.3"
nom_locate = "4.2.0"
log = "0.4.21"
anyhow = "1.0.83"
itertools = "0.12.1"

[dev-dependencies]
indoc = "2.0.5"
